# cogitons

./: .gitignore  CONTRIBUTING.md  README.md
.github/: pull_request_template.md
.github/workflows/: ci.yml
backend/: .env.example  alembic.ini  pyproject.toml  requirements.txt  ruff.toml
backend/app/: main.py
backend/app/api/: auth.py  discussions.py  feed.py  health.py  moderation.py  responses.py  search.py  stats.py  subjects.py  users.py  votes.py
backend/app/core/: config.py  database.py  dependencies.py  security.py
backend/app/models/: __init__.py  discussion.py  moderation_log.py  report.py  response.py  subject.py  token.py  user.py  vote.py
backend/app/repositories/: discussion_repository.py  feed_repository.py  moderation_repository.py  response_repository.py  search_repository.py  subject_repository.py  user_repository.py  vote_repository.py
backend/app/schemas/: auth.py  discussion.py  feed.py  report.py  response.py  search.py  subject.py  user.py  vote.py
backend/app/services/: auth_service.py  discussion_service.py  feed_service.py  moderation_service.py  response_service.py  search_service.py  subject_service.py  user_service.py  vote_service.py
backend/app/utils/: email.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial.py  0002_add_vote_user_fk.py
backend/tests/: test_placeholder.py
docs/: index.html  mockup-v1.html
frontend/: .env.example  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: NavBar.tsx  (+1 more)
tmp/: setup_github.py
(+19 files in other folders)
