[build-system]
# Modern Setuptools setup
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cogitons-backend"
version = "0.1.0"
description = "Backend core engine for Cogitons"
requires-python = ">=3.11"  # Matches your Ruff configuration target

[tool.setuptools.packages.find]
where = ["."]
